chore: include missing env examples

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ MYSQL_PASSWORD=STRING
 MYSQL_ROOT_PASSWORD=STRING
 PHP_PORT=INT
 REDIS_PORT=INT
+PHP_ADMIN=INT
+PHP_PORT=INT
+REDIS_PORT=INT
+PMA_USER=STRING
+PMA_PASSWORD=STRING
+PMA_ROOT_PASSWORD=STRING
+PMA_PORT=INT
